<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Click As Fast As You Can!</string>
    <string name="action_settings">Settings</string>
    
    <string name="cancel">Cancel</string>
    <string name="please_sign_in">Please sign in.</string>
    <string name="sign_out">Sign out</string>
    <string name="inbox">Inbox</string>
    <string name="invite_players">Invite players</string>
    <string name="start_game">Start Game</string>
    <string name="get_ready">Get Ready!</string>
    <string name="start_over">Start Over</string>
    <string name="sec_five">5 sec</string>
    <string name="sec_ten">10 sec</string>
    <string name="sec_twenty">20 sec</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="score_game">Score:</string>
    <string name="score_pps">Points/sec:</string>
    
    <string name="games_matches">Matches</string>
    <string name="games_achievements">Achievements</string>
    <string name="games_leaderboards">Leaderboards</string>

    
    <string name="highscore_dialog">Pick highscore list</string>
    <string-array name="highscore_array">
        <item>5 Seconds</item>
        <item>10 Seconds</item>
        <item>20 Seconds</item>
    </string-array>
    
</resources>